log
Wed, Apr 16, 2025  4:51:49 PM: 
 hashmap.c | 135 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++-----
 1 file changed, 126 insertions(+), 9 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:69:20: error: 'return' with a value, in function returning void [-Werror]
             return 0 ;
                    ^
hashmap.c:52:6: note: declared here
 void insertMap(HashMap * map, char * key, void * value)
      ^~~~~~~~~
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:154:9: error: 'return' with no value, in function returning non-void [-Werror]
         return ;
         ^~~~~~
hashmap.c:151:8: note: declared here
 Pair * searchMap(HashMap * map,  char * key)
        ^~~~~~~~~
cc1.exe: all warnings being treated as errors
eeef3b7
Wed, Apr 16, 2025  4:54:50 PM: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'eraseMap':
hashmap.c:139:12: error: 'return' with a value, in function returning void [-Werror]
     return NULL ;
            ^~~~
hashmap.c:136:6: note: declared here
 void eraseMap(HashMap * map,  char * key)
      ^~~~~~~~
cc1.exe: all warnings being treated as errors
5e2e0cc
Wed, Apr 16, 2025  4:56:22 PM: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
Compilation failed
C:\Users\isabo\AppData\Local\Temp\cc4MgUWE.o: In function `erase_test1':
C:\Users\isabo\OneDrive\Escritorio\LAB_3\lab-3-tablas-hash-Isaaabot/test.c:292: undefined reference to `eraseMap'
C:\Users\isabo\AppData\Local\Temp\cc4MgUWE.o: In function `erase_test2':
C:\Users\isabo\OneDrive\Escritorio\LAB_3\lab-3-tablas-hash-Isaaabot/test.c:320: undefined reference to `eraseMap'
C:\Users\isabo\AppData\Local\Temp\cc4MgUWE.o: In function `erase_test3':
C:\Users\isabo\OneDrive\Escritorio\LAB_3\lab-3-tablas-hash-Isaaabot/test.c:333: undefined reference to `eraseMap'
C:\Users\isabo\AppData\Local\Temp\cc4MgUWE.o: In function `first_test':
C:\Users\isabo\OneDrive\Escritorio\LAB_3\lab-3-tablas-hash-Isaaabot/test.c:349: undefined reference to `firstMap'
C:\Users\isabo\OneDrive\Escritorio\LAB_3\lab-3-tablas-hash-Isaaabot/test.c:371: undefined reference to `firstMap'
C:\Users\isabo\AppData\Local\Temp\cc4MgUWE.o: In function `next_test':
C:\Users\isabo\OneDrive\Escritorio\LAB_3\lab-3-tablas-hash-Isaaabot/test.c:394: undefined reference to `nextMap'
C:\Users\isabo\OneDrive\Escritorio\LAB_3\lab-3-tablas-hash-Isaaabot/test.c:407: undefined reference to `nextMap'
C:\Users\isabo\OneDrive\Escritorio\LAB_3\lab-3-tablas-hash-Isaaabot/test.c:416: undefined reference to `nextMap'
C:\Users\isabo\AppData\Local\Temp\cc4MgUWE.o: In function `enlarge_test':
C:\Users\isabo\OneDrive\Escritorio\LAB_3\lab-3-tablas-hash-Isaaabot/test.c:433: undefined reference to `enlarge'
collect2.exe: error: ld returned 1 exit status
b01eb33
Wed, Apr 16, 2025  4:57:51 PM: 
 hashmap.c | 12 +++++-------
 1 file changed, 5 insertions(+), 7 deletions(-)
 tests:  8|3
total_score: 40/70
0107475
Wed, Apr 16, 2025  8:23:38 PM: 
 hashmap.c | 33 ++++++++++++++++++---------------
 1 file changed, 18 insertions(+), 15 deletions(-)
 tests:  8|3
total_score: 40/70
ca7ce8f
